--- a/src/main/resources/languages/landing_page/de.properties
+++ b/src/main/resources/languages/landing_page/de.properties
@@ -1,3 +1,4 @@
-title=Wilkommen zurück!
-username=Benutzername
-password=Passwort
+login.title=Wilkommen zurück!
+login.username=Benutzername
+login.password=Password
+login.login=ANMELDEN
