--- a/src/main/resources/languages/starting_page/en_US.properties
+++ b/src/main/resources/languages/starting_page/en_US.properties
@@ -1,8 +1,14 @@
-titleQuote=Life is short, travel often
-home=Home
-bookings=Bookings
-newTrip=New Trip
-logOut=LOG OUT
-booking.number=Booking No.
-customer.number=Customer No.
-customer.name=Customer Name
+menu.agencyName=Agency Reis
+menu.home=Home
+menu.createBooking=New Booking
+menu.showBookings=Show Bookings
+menu.logout=LOG OUT
+
+searchBooking.title=Search for an existing booking
+searchBooking.bookingNumber=Booking No.
+searchBooking.customerNumber=Customer No.
+searchBooking.customerName=Customer Name
+searchBooking.searchButton=SEARCH
+
+createBooking.title=Create a new booking
+createBooking.createButton=CREATE
