--- a/src/main/resources/languages/landing_page/en_US.properties
+++ b/src/main/resources/languages/landing_page/en_US.properties
@@ -1,3 +1,4 @@
-title=Welcome back!
-username=Username
-password=Password
+login.title=Welcome back!
+login.username=Username
+login.password=Password
+login.login=LOG IN
