--- a/src/main/resources/languages/view_bookings/de.properties
+++ b/src/main/resources/languages/view_bookings/de.properties
@@ -4,6 +4,14 @@ menu.createBooking=Neue Buchung
 menu.showBookings=Buchungen anzeigen
 menu.logout=ABMELDEN
 
+searchBooking.title=Nach einer bestehenden Buchung suchen
+searchBooking.bookingNumber=Buchungs-Nr.
+searchBooking.customerNumber=Kunden-Nr.
+searchBooking.customerName=Kundenname
+searchBooking.searchButton=SUCHEN
+
+details.back=ZURÜCK
+
 tableView.bookingID=Buchungs-Nr.
 tableView.customerID=Kunden-Nr.
 tableView.customerName=Kunde
