--- a/src/main/resources/languages/view_bookings/en_US.properties
+++ b/src/main/resources/languages/view_bookings/en_US.properties
@@ -4,6 +4,14 @@ menu.createBooking=New Booking
 menu.showBookings=Show Bookings
 menu.logout=LOG OUTDEMO
 
+searchBooking.title=Search for an existing booking
+searchBooking.bookingNumber=Booking No.
+searchBooking.customerNumber=Customer No.
+searchBooking.customerName=Customer Name
+searchBooking.searchButton=SEARCH
+
+details.back=BACK
+
 tableView.bookingID=Booking No.
 tableView.customerID=Customer No.
 tableView.customerName=Customer
